--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="faveicon.ico" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">"
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <link rel="stylesheet" type="text/css" href="css/style.production.css">
     </head>
 
     <body>
