updated contact.html github link
updated github link to my profile

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 <p>Find me on</p>
                 <div class="social-media">
                 <!--Github logo-->
-                <a href="https://github.com/" role="githublink">
+                <a href="https://github.com/mrowehill" role="githublink">
                     <img src="imgs/github-icon.svg" alt="Github logo for a black cat on a white backgroud with a black circular border">
                 </a>
                 <!--Twitter logo-->
