img name change
changed name of img of twitter icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Mars Rowe-Hill - Portfolio</title>
-        <link rel="shortcut icon" href="faveicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="faveicon.ico" type="image/x-icon" >
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">"
         <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -48,15 +48,15 @@
                 <p>Find me on</p>
                 <div class="social-media">
                 <!--Github logo-->
-                <a href="https://github.com/mrowehill" role="githublink">
+                <a href="https://github.com/mrowehill" target="_blank">
                     <img src="imgs/github-icon.svg" alt="Github logo for a black cat on a white backgroud with a black circular border">
                 </a>
                 <!--Twitter logo-->
-                <a href="https://twitter.com/" role="twitterlink">
-                    <img src="imgs/twitter-icon (2).svg" alt="Twitter bird logo in black on a white backgroud">
+                <a href="https://twitter.com/" target="_blank">
+                    <img src="imgs/twitter-icon.svg" alt="Twitter bird logo in black on a white backgroud">
                 </a>
                 <!--LinkedIn logo-->
-                <a href="https://www.linkedin.com/" role="linkedinlink">
+                <a href="https://www.linkedin.com/" target="_blank">
                     <img src="imgs/linkedin-icon.svg" alt="LinkedIn logo of a black circle with bolded lowercase letters spelling In">
                 </a>
                 </div>
