update work.html social media links
added target=_blank to social media links in footer

--- a/work.html
+++ b/work.html
@@ -76,15 +76,15 @@
                 <p>Find me on</p>
                 <div class="social-media">
                 <!--Github logo-->
-                <a href="https://github.com/mrowehill" role="githublink">
+                <a href="https://github.com/mrowehill" target="_blank">
                     <img src="imgs/github-icon.svg" alt="Github logo for a black cat on a white backgroud with a black circular border">
                 </a>
                 <!--Twitter logo-->
-                <a href="https://twitter.com/" role="twitterlink">
+                <a href="https://twitter.com/" target="_blank">
                     <img src="imgs/twitter-icon (2).svg" alt="Twitter bird logo in black on a white backgroud">
                 </a>
                 <!--LinkedIn logo-->
-                <a href="https://www.linkedin.com/" role="linkedinlink">
+                <a href="https://www.linkedin.com/" target="_blank">
                     <img src="imgs/linkedin-icon.svg" alt="LinkedIn logo of a black circle with bolded lowercase letters spelling In">
                 </a>
                 </div>
