--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>About Mars Rowe-Hill</title>
-        <link rel="shortcut icon" href="faveicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="faveicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">"
         <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -687,7 +687,7 @@
                 </a>
                 <!--Twitter logo-->
                 <a href="https://twitter.com/" target="_blank">
-                    <img src="imgs/twitter-icon (2).svg" alt="Twitter bird logo in black on a white backgroud">
+                    <img src="imgs/twitter-icon.svg" alt="Twitter bird logo in black on a white backgroud">
                 </a>
                 <!--LinkedIn logo-->
                 <a href="https://www.linkedin.com/" target="_blank">
