--- a/about.html
+++ b/about.html
@@ -649,7 +649,7 @@
                     </g>
                 </svg>
             </div>
-            <table>
+            <table class="skills-table">
                 <thead>
                     <tr>
                         <th>Skills</th>
