updated footer class on about.html and contact.html

--- a/about.html
+++ b/about.html
@@ -677,7 +677,7 @@
             </table>
         </main>
 
-        <footer>
+        <footer class="page-footer">
             <div>
                 <p>Find me on</p>
                 <div class="social-media">
