--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             </div>
         </main>
 
-        <footer>
+        <footer class="page-footer">
             <div>
                 <p>Find me on</p>
                 <div class="social-media">
