--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
 
     <body>
         <header class="page-header">
-            <h1>Contact</h1>
             <img src="imgs/name-logo.png" alt="logo of the name Mars Rowe-Hill" class="page-header_item">
+            <h1 class="contact-title">Contact</h1>
             <nav class="main-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
