updated contact form on contact.html
moved around aspects of the contact form for ease of reading

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
     <body>
         <header class="page-header">
             <img src="imgs/name-logo.png" alt="logo of the name Mars Rowe-Hill" class="page-header_item">
-            <h1 class="contact-title">Contact</h1>
             <nav class="main-navigation page-header_item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
@@ -33,7 +32,8 @@
         </header>
 
         <main class="page-main">
-            <div>
+            <div class="form-contact">
+                <h1 class="contact-title">Contact Me!</h1>
                 <br>
             <a href="tel:+832-434-3854">Tel: +832-434-3854</a>
                 <br>
