updated contact form contact.html
added info and restructured

--- a/contact.html
+++ b/contact.html
@@ -34,17 +34,21 @@
         <main class="page-main">
             <div class="form-contact">
                 <h1 class="contact-title">Contact Me!</h1>
+                <p>
+                    Mars Rowe
+                    <br>
+                    Houston, Tx 
+                    <br>
+                    USA
+                </p> 
+                 <a href="tel:+832-434-3854">Tel: +832-434-3854</a>
                 <br>
-            <a href="tel:+832-434-3854">Tel: +832-434-3854</a>
+                 <a  href="mailto:m.rowehill@gmail.com">Email: m.rowehill@gmail.com</a>
                 <br>
-            <a  href="mailto:m.rowehill@gmail.com">Email: m.rowehill@gmail.com</a>
-            </div>
-
-            <div>
                 <a href="mailto:m.rowehill@gmail.com">Contact me!</a>
             </div>
 
-            <div>
+            <div class="contact-info">
                 <form action="/" method="post" id="contact-form">
                     <label class="standard-label" for="contact-email">E-mail: </label>
                     <input type="email" id="contact-email" required>
