--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,9 @@
                     <label class="standard-label" for="contact-telephone">Telephone: </label>
                     <input type="tel" id="contact-telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
 
-                    <label for="contact-message-input">Message: </label>
+                    <label class="standard-label-message" for="contact-message-input">Message: </label>
                     <textarea required maxlength="240" id="contact-message-input"></textarea>
-                    <input type="submit" value="Send message">
+                    <input class="standard-submit" type="submit" value="Send message">
                 </form>
             </div>
         </main>
